force-app/main/default/objects/Financing__c/Financing__c.object-meta.xml
<CustomObject>
    <description>Custom object to track financing structures created for restructuring engagements.</description>
    <label>Financing</label>
    <nameField>
        <displayFormat>F-{000000}</displayFormat>
        <label>Financing #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>