force-app/main/default/objects/Financing__c/fields/Click_for_details__c.field-meta.xml
<CustomField>
    <fullName>Click_for_details__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id , &quot;Click here for details&quot;, &quot;_self&quot;)</formula>
    <label>Click for details</label>
    <type>Text</type>
</CustomField>