force-app/main/default/objects/Financing__c/fields/Financing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Financing_Amount__c</fullName>
    <label>Financing Amount (MM)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>